GNOME Bugzilla – Bug 740376
aggregator: Serialized events are deserialized
Last modified: 2014-11-19 17:05:50 UTC
See the commit messages of the two patches for further details
Created attachment 291010 [details] [review] videoaggregator: Don't output 0-duration buffers at the segment end
Created attachment 291011 [details] [review] aggregator: Block serialized events/queries until the pad has consumed all buffers Otherwise the caps of the pad might change while the subclass still works with a buffer of the old caps, assuming the the current pad caps apply to that buffer. Which then leads to crashes and other nice effects.
Created attachment 291013 [details] [review] aggregator: Drop serialized events/queries if the pad is flushing
Created attachment 291014 [details] [review] aggregator: Unblock events/queries immediately if the pad is flushing
Review of attachment 291010 [details] [review]: Makes sense
commit 4ad698466204ffb0b6ecfdc7cdde78faaf6b16cf Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Nov 19 17:17:06 2014 +0100 aggregator: Unblock events/queries immediately if the pad is flushing https://bugzilla.gnome.org/show_bug.cgi?id=740376 commit ce69180862f151776d94776bf1a8f67468eeaad8 Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Nov 19 17:15:02 2014 +0100 aggregator: Drop serialized events/queries if the pad is flushing https://bugzilla.gnome.org/show_bug.cgi?id=740376 commit a31faecb8b82414bc51ed460f1f85e893d98c0d1 Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Nov 19 17:03:41 2014 +0100 aggregator: Block serialized events/queries until the pad has consumed all buffers Otherwise the caps of the pad might change while the subclass still works with a buffer of the old caps, assuming the the current pad caps apply to that buffer. Which then leads to crashes and other nice effects. https://bugzilla.gnome.org/show_bug.cgi?id=740376 commit 6c0d01ce173e4651df3462a3c599b19a179300b5 Author: Sebastian Dröge <sebastian@centricular.com> Date: Wed Nov 19 17:02:40 2014 +0100 videoaggregator: Don't output 0-duration buffers at the segment end https://bugzilla.gnome.org/show_bug.cgi?id=740376